Добавил сдвиг по координатам вне зависимости от толщины бордера

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,9 @@
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="ru"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="ru">
+<!--<![endif]-->
 
 <head>
 
@@ -11,7 +13,7 @@
   <title>SNAKE</title>
   <meta name="description" content="">
 
-  
+
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -22,16 +24,17 @@
 </head>
 
 <body>
+  <button class="btn_snake">Запустить адскую змею</button>
+  <div class="wall_wrap">
+    <div class="snake_wrap">
+      <div class="sneake_head"></div>
+    </div>
+  </div>
 
-	<div class="wall_wrap">
-		<div class="snake_wrap">
-			<div class="sneake_head"></div>
-		</div>
-	</div>
- 
 
 
   <script src="js/common.js"></script>
-  
+
 </body>
+
 </html>
